--- a/LanchesEdu/LanchesEdu/Views/Home/Index.cshtml
+++ b/LanchesEdu/LanchesEdu/Views/Home/Index.cshtml
@@ -1,2 +1,13 @@
-﻿<h1>View index home</h1>
+﻿@model HomeViewModel
+
 <partial name="_Carousel" />
+
+<h4>Os preferidos da semana</h4>
+
+
+<div class="row">
+    @foreach(var lanche in Model.LanchesPreferidos)
+    {
+        <partial name="_LanchesResumo" for="@lanche"/>
+    }
+</div>
