Ajustando controller dos lanches

--- a/LanchesEdu/LanchesEdu/Views/Shared/Default.cshtml
+++ b/LanchesEdu/LanchesEdu/Views/Shared/Default.cshtml
@@ -2,7 +2,7 @@
 
 @if (Model.CarrinhoDeCompras.CarrinhoDeComprasItens.Count > 0)
 {
-    <a asp-controller="CarrinhoDeCompra" asp-action="Index">
+    <a asp-controller="CarrinhoDeCompras" asp-action="Index">
         <span>
             <img src="~/images/cart-5-16.ico" />
         </span>
