--- a/LanchesEdu/LanchesEdu/Views/Shared/_Layout.cshtml
+++ b/LanchesEdu/LanchesEdu/Views/Shared/_Layout.cshtml
@@ -18,9 +18,10 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    @* @await Component.InvokeAsync("CarrinhoDeCompraResumo") *@
+                   @*  @await Component.InvokeAsync("CarrinhoDeCompraResumo") *@
+                     @await Component.InvokeAsync("CategoriaMenu") 
                     <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                    <a class="nav-link text-light" asp-area="" asp-controller="Lanche" asp-action="List">Lanches</a>
+                    @* <a class="nav-link text-light" asp-area="" asp-controller="Lanche" asp-action="List">Lanches</a> *@
                 </div>
             </div>
         </nav>
