--- a/LanchesEdu/LanchesEdu/Views/Shared/_LanchesResumo.cshtml
+++ b/LanchesEdu/LanchesEdu/Views/Shared/_LanchesResumo.cshtml
@@ -4,6 +4,19 @@
 <div class="col-sm-2 col-md-4 col-lg-4">
     <p><img src="@Model.ImagemURL" class="img-fluid" /></p>
     <h4>Preço: @Model.Preco.ToString("c")</h4>
-    <h4>@Model.Nome</h4>
+
+    <h4>
+        <a asp-controller="Lanche" asp-action="Details" asp-route-lancheId="@Model.IdLanche">@Model.Nome</a>
+    </h4>
+
     <p>@Model.DescricaoCurta</p>
+
+    <div>
+        <p class="button">
+            <a class="btn btn-primary" id="cartButton" asp-controller="carrinhoCompra"
+               asp-action="AdicionarItemNoCarrinhoCompra" asp-route-lancheId="@Model.IdLanche">
+                Incluir no carrinho
+            </a>
+        </p>
+    </div>
 </div>
